fixes colors of inline code in dark mode

--- a/styling-dark.scss
+++ b/styling-dark.scss
@@ -1,3 +1,8 @@
+/*-- scss:defaults --*/
+$code-bg: rgba(67, 67, 67, 0.65);
+$code-color: rgb(255, 255, 255);
+
+
 /*-- scss:rules --*/
 
 img.switches-dark-mode {
